--- a/docs/_includes/css/typography.html
+++ b/docs/_includes/css/typography.html
@@ -14,6 +14,7 @@
     <div class="docs-tab-content-container">
         <div class="docs-tab-content">
             <div class="docs-example">
+                <h1 class="title">h1.title Lussa UI heading</h1>
                 <h1>h1. Lussa UI heading</h1>
                 <h2>h2. Lussa UI heading</h2>
                 <h3>h3. Lussa UI heading</h3>
@@ -24,6 +25,7 @@
         </div>
         <div class="docs-tab-content">
 {% highlight html %}
+<h1 class="title">h1.title Lussa UI heading</h1>
 <h1>h1. Lussa UI heading</h1>
 <h2>h2. Lussa UI heading</h2>
 <h3>h3. Lussa UI heading</h3>
@@ -177,6 +179,42 @@ You can use the mark tag to <mark>highlight</mark> text.
         </div>
     </div>
 </div>
+
+<!-- Label -->
+<h2 class="docs-subsection-title" id="type-label">Label</h2>
+<div class="docs-subsection-desc">
+    <p>Digunakan untuk memberikan aksen untuk inline label, biasanya dipakai untuk tag. Ukuran teks label sendiri 75% ukuran parentnya.</p>
+</div>
+
+<div class="docs-tab">
+    <ul class="docs-tab-link-container">
+        <li>tampilan</li>
+        <li>&lt;html&gt;</li>
+    </ul>
+    <div class="docs-tab-content-container">
+        <div class="docs-tab-content">
+            <div class="docs-example">
+            <span class="label label-default">Default</span>
+            <span class="label label-primary">Primary</span>
+            <span class="label label-success">Success</span>
+            <span class="label label-info">Info</span>
+            <span class="label label-warning">Warning</span>
+            <span class="label label-error">Error</span>
+            </div>
+        </div>
+        <div class="docs-tab-content">
+{% highlight html %}
+<span class="label label-default">Default</span>
+<span class="label label-primary">Primary</span>
+<span class="label label-success">Success</span>
+<span class="label label-info">Info</span>
+<span class="label label-warning">Warning</span>
+<span class="label label-error">Error</span>
+{% endhighlight %}
+        </div>
+    </div>
+</div>
+
 
 <!-- Text Alignment -->
 <h2 class="docs-subsection-title" id="type-alignment">Alignment Class</h2>
