--- a/docs/_includes/getting-started/installation.html
+++ b/docs/_includes/getting-started/installation.html
@@ -7,7 +7,7 @@
     <p>
     Lussa UI dibuat untuk memenuhi kebutuhan development web masa kini yang berbasis MEAN - stacks. Jika kamu adalah developer MEAN - stack seharusnya semua prerequisite dibawah ini sudah di-install.
     </p>
-    <dl>
+    <dl class="dl-horizontal">
         <dt>git</dt>
         <dd>Pastikan git sudah diinstall dan sudah berada didalam path system. Kalo belum ada, rekomendasi kami bisa di-download langsung di official websitenya langsung <a href="http://git-scm.com">git-scm.com</a>
 
