--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -12,14 +12,11 @@
             <li {% if page.slug == 'css' %} class="active" {% endif %}>
                 <a href="/css.html">CSS</a>
             </li>
-            <li {% if page.slug == 'components' %} class="active" {% endif %}>
+            <li {% if page.slug == 'component' %} class="active" {% endif %}>
                 <a href="/component.html">Components</a>
             </li>
-            <li {% if page.slug == 'icon' %} class="active" {% endif %}>
-                <a href="/icon.html">Iconography</a>
-            </li>
-            <li {% if page.slug == 'fx' %} class="active" {% endif %}>
-                <a href="/fx.html"><i>f</i>&nbsp;(x)</a>
+            <li {% if page.slug == 'theme' %} class="active" {% endif %}>
+                <a href="/theme.html">Theme</a>
             </li>
         </ul>
     </div>
