--- a/less/main.less
+++ b/less/main.less
@@ -22,6 +22,7 @@
 @import "buttons.less";
 @import "code.less";
 @import "ruler.less";
+@import "label.less";
 
 // Component
 @import "components.less";
