--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,6 +13,7 @@
 @import 'mixins/tab-focus.less';
 
 // CSS
+@import 'mixins/typography.less';
 @import 'mixins/buttons.less';
 @import 'mixins/forms.less';
 @import 'mixins/table.less';
