--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -28,6 +28,7 @@
         <li><a href="#type-headings">Headings</a></li>
         <li><a href="#type-paragraph">Paragraf</a></li>
         <li><a href="#type-inline-text">Inline text elements</a></li>
+        <li><a href="#type-label">Label</a></li>
         <li><a href="#type-alignment">Alignment</a></li>
         <li><a href="#type-transformation">Kapitalisasi</a></li>
         <li><a href="#type-accent">Aksen</a></li>
@@ -65,6 +66,7 @@
         <li><a href="#forms-inline">Inline Form</a></li>
         <li><a href="#forms-horizontal">Horizontal form</a></li>
         <li><a href="#forms-controls">Jenis-jenis Input Dasar</a></li>
+        <li><a href="#forms-input-group">Input Group</a></li>
         <li><a href="#forms-controls-static">Static Input</a></li>
         <li><a href="#forms-control-state">Input State</a></li>
         <li><a href="#forms-control-validation">Validasi & Feedback</a></li>
@@ -76,6 +78,7 @@
     <a href="#buttons">Button / Tombol</a>
     <ul>
         <li><a href="#buttons-tags">Button tags</a></li>
+        <li><a href="#buttons-group">Button Group</a></li>
         <li><a href="#buttons-accent">Aksen</a></li>
         <li><a href="#buttons-sizes">Variasi Ukuran</a></li>
         <li><a href="#buttons-state">Button State</a></li>
